--- a/requirements.txt
+++ b/requirements.txt
@@ -65,6 +65,7 @@ nltk==3.9.1
 notebook==7.3.3
 notebook_shim==0.2.4
 numpy==2.2.4
+opencv-python==4.11.0.86
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
